  or :func:`rpy2.rinterface.get_writeconsole_regular` / :func:`rpy2.rinterface.get_writeconsole_warnerror`
  respectively should be used instead.
  
- The attribute :attr:`rpy2.robjects.RObject.slots` can now be implictly interated on
  (the method :meth:`__iter__` is now an alias for :meth:`keys`).


Release 2.7.6
=============
 
Changes
-------

- :mod:`rpy2.robjects.lib.ggplot2` was modified to match the newly released
  ggplot2-2.0.0. This is introducing API-breaking changes, which breaks the
  promise to keep the API stable through bugfix releases within series, but
  without it 2.7.x will not a work with new default installation of the R
  package ggplot2.


Release 2.7.5
=============

Bugs fixed
----------

- Division and floordivision through the delegator `.ro` provided with
  R vectors wrapped by `robjects`. (issue #320)

- Memory leak when unserializing (unpickling) R objects bundled in Python
  objects (issue #321)
  

Release 2.7.4
=============

Bugs fixed
----------

- Python 3.5 highlighted slightly incorrect C-level flags in rpy2 objects
  declarations, and :mod:`rpy2.robjects` could not be imported.
  
- Fixed unit tests for rmagic when :mod:`numpy` is not installed, and
  for :mod:`numpy` is installed by :mod:`pandas` in missing.


Release 2.7.3
=============

Bugs fixed
----------

- method :meth:`DataFrame.collect` in :mod:`rpy2.robjects.lib.dplyr`
  was not functioning.

- Applied patch by Matthias Klose to fix implict pointer conversions.

- :mod:`pandas2ri.ri2py_dataframe` is now propagating the row names
  in the R data frame into an index in the pandas data frame (issue #285)

- methods `union`, `intersect`, `setdiff`, `ungroup` defined in the R package
  `dplyr` were missing from the
  `DataFrame` definition in :mod:`rpy2.robjects.lib.dplyr`


Release 2.7.2
=============

Bugs fixed
----------

- methods `distinct`, `sample_n`, and `sample_frac` defined in the R package
  `dplyr` were missing from the `DataFrame` definition in