@@ -48,6 +48,12 @@ class RSlots(object):
             v = self[key]
             yield v
 
+
+def _reduce_robjectmixin(rdumps, rtypeof,
+                         rinterface_factory,
+                         rpy2type):
+    rinterface_level=rinterface_factory(rdumps, rtypeof)
+    return rpy2type(rinterface_level)
         
 class RObjectMixin(object):
     """ Class to provide methods common to all RObject instances """
@@ -131,6 +137,18 @@ class RObjectMixin(object):
     rclass = property(_rclass_get, _rclass_set, None,
                       "R class for the object, stored as an R string vector.")
 
+
+    def __reduce__(self):
+        """
+        robjects-level `__reduce__()`, calling the parent class' `__reduce__()`
+        before substituting the current high-level class as a constructor
+        """
+        t = super().__reduce__()
+        # fix the constructor and parameters
+        l = list(t)
+        l[1] = (l[1][0], l[1][1], l[0], type(self))
+        l[0] = _reduce_robjectmixin
+        return tuple(l)
 
     
 def repr_robject(o, linesep=os.linesep):
